Closed
Bug 1069109
Opened 11 years ago
Closed 11 years ago
[Camera] While launching camera app, the background music is stopped.
Categories
(Core :: Audio/Video, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| b2g-v2.0 | --- | unaffected |
| b2g-v2.1 | --- | unaffected |
| b2g-v2.2 | --- | verified |
People
(Reporter: scheng, Assigned: sotaro)
References
Details
(Keywords: regression)
Attachments
(2 files)
REPRODUCING PROCEDURES:
1.play music
2.enter into camera
3.music can not play
| Assignee | ||
Comment 1•11 years ago
|
||
This bug is created based on Bug 1059679 Comment 16.
| Assignee | ||
Updated•11 years ago
|
Component: AudioChannel → Video/Audio
Product: Firefox OS → Core
| Assignee | ||
Comment 2•11 years ago
|
||
Changed to correct component. This bug is related to HTMLMediaElement.
| Assignee | ||
Updated•11 years ago
|
blocking-b2g: --- → 2.2?
Comment 4•11 years ago
|
||
This bug repro's on Flame KK builds: Flame 2.2, OpenC 2.2
Actual Results: Music currently playing stops playing when the user launches the Camera app.
Repro Rate: 4/4
Environmental Variables:
Device: Flame Master
BuildID: 20140917212258
Gaia: d37950eb09e28aa18d0e01df9ff90574bd4337e0
Gecko: 426497473505
Version: 35.0a1 (Master)
Firmware Version: L1TC10011800
User Agent: Mozilla/5.0 (Mobile; rv:35.0) Gecko/35.0 Firefox/35.0
-----------------------------------------------------------------
Environmental Variables:
Device: Open_C 2.2
BuildID: 20140917212258
Gaia: d37950eb09e28aa18d0e01df9ff90574bd4337e0
Gecko: 426497473505
Version: 35.0a1 (2.2)
Firmware: P821A10v1.0.0B06_LOG_DL
User Agent: Mozilla/5.0 (Mobile; rv:35.0) Gecko/35.0 Firefox/35.0
-----------------------------------------------------------------
-----------------------------------------------------------------
This bug does NOT repro on Flame kk build: Flame 2.1, Flame 2.0, Flame 2.0 Base
Actual Result: Music continues to play after camera app is launched.
Repro Rate: 6/6
Environmental Variables:
Device: Flame 2.1 KK
BuildID: 20140918091821
Gaia: b0b0ab8e0de5d1150feaf76f63f437edf695f15f
Gecko: 904483d05623
Version: 34.0a2
Firmware Version: L1TC10011800
User Agent: Mozilla/5.0 (Mobile; rv:34.0) Gecko/34.0 Firefox/34.0
-----------------------------------------------------------------
Environmental Variables:
Device: Flame 2.0
BuildID: 20140918082321
Gaia: 31434a3949556171f3565ca47ac2b44e810e95e6
Gecko: 5cf783171d5c
Version: 32.0 (2.0)
Firmware Version: L1TC10011800
User Agent: Mozilla/5.0 (Mobile; rv:32.0) Gecko/32.0 Firefox/32.0
-----------------------------------------------------------------
Environmental Variables:
Device: Flame 2.0 KK Base
BuildID: 20140904160718
Gaia: 506da297098326c671523707caae6eaba7e718da
Gecko:
Version: 32.0 (2.0)
Firmware: V180
User Agent: Mozilla/5.0 (Mobile; rv:32.0) Gecko/32.0 Firefox/32.0
QA Whiteboard: [QAnalyst-Triage?]
status-b2g-v2.0:
--- → unaffected
status-b2g-v2.1:
--- → unaffected
status-b2g-v2.2:
--- → affected
Flags: needinfo?(jmitchell)
Keywords: qawanted → regression
QA Contact: croesch
Updated•11 years ago
|
Updated•11 years ago
|
QA Contact: croesch
Updated•11 years ago
|
QA Contact: jmercado
Comment 5•11 years ago
|
||
Bug 1058452 seems to be the cause for this issue.
Mozilla-inbound Regression Window
Last working
Environmental Variables:
Device: Flame 2.2
BuildID: 20140909061253
Gaia: 4acd3e69b263b54f4111e3586ff4ade84b49b4da
Gecko: 62e5db38c251
Version: 35.0a1 (2.2)
Firmware Version:
User Agent: Mozilla/5.0 (Mobile; rv:35.0) Gecko/35.0 Firefox/35.0
First Broken
Environmental Variables:
Device: Flame 2.2
BuildID: 20140909062752
Gaia: 4acd3e69b263b54f4111e3586ff4ade84b49b4da
Gecko: 286f6adfb567
Version: 35.0a1 (2.2)
Firmware Version:
User Agent: Mozilla/5.0 (Mobile; rv:35.0) Gecko/35.0 Firefox/35.0
Last working gaia / First broken gecko - Issue DOES ocurr
Gaia: 4acd3e69b263b54f4111e3586ff4ade84b49b4da
Gecko: 286f6adfb567
First broken gaia / Last working gecko - Issue does NOT occur
Gaia: 4acd3e69b263b54f4111e3586ff4ade84b49b4da
Gecko: 62e5db38c251
Gaia Pushlog: http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=62e5db38c251&tochange=286f6adfb567
Comment 6•11 years ago
|
||
Broken by Bug 1058452 - can you take a look Sotaro?
QA Whiteboard: [QAnalyst-Triage?] → [QAnalyst-Triage+]
Flags: needinfo?(jmitchell) → needinfo?(sotaro.ikeda.g)
| Assignee | ||
Comment 7•11 years ago
|
||
Okey, I take this bug.
Assignee: nobody → sotaro.ikeda.g
Flags: needinfo?(sotaro.ikeda.g)
| Assignee | ||
Comment 8•11 years ago
|
||
When HTMLMediaElement has valid data, it occupies Audio channel even when DOMMediaStream does not have audio in HTMLMediaElement::UpdateAudioChannelPlayingState().
http://dxr.mozilla.org/mozilla-central/source/content/html/content/src/HTMLMediaElement.cpp#3930
The problem could be fixed if HTMLMediaElement does not occupy Audio channel if DOMMediaStream does not have audio.
| Assignee | ||
Comment 9•11 years ago
|
||
| Assignee | ||
Updated•11 years ago
|
Attachment #8495511 -
Flags: review?(cajbir.bugzilla)
Updated•11 years ago
|
Attachment #8495511 -
Flags: review?(cajbir.bugzilla) → review+
| Assignee | ||
Comment 10•11 years ago
|
||
| Assignee | ||
Updated•11 years ago
|
blocking-b2g: 2.2? → ---
| Assignee | ||
Comment 11•11 years ago
|
||
Nominate to b2g-v2.2+. This bug blocks b2g-v2.2+ bug (Bug 1071198).
blocking-b2g: --- → 2.2?
Comment 12•11 years ago
|
||
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla35
Updated•11 years ago
|
Comment 13•11 years ago
|
||
Hi Wesly,Ryan,
We need this patch on 2.0 branch to solve power consumption problem triggered by patch for bug#1058452.
Power consumption is definitely a blocking issue, please help to uplift patch to 2.0 branch.
Thanks a lot.
Flags: needinfo?(wehuang)
Flags: needinfo?(ryanvm)
Comment 14•11 years ago
|
||
Hi Ryan:
I think it will be quite hard to land to 2.0 now, but do you think it's possible for you to help re-base your patch for 2.0, as a support to partner? Thank you in advance!
Flags: needinfo?(wehuang)
Comment 15•11 years ago
|
||
You need to follow the well-documented practices if you want a patch to be considered for uplift.
https://wiki.mozilla.org/Release_Management/B2G_Landing#Landing_Procedure_3
BTW, according to comment 4, v2.0 is unaffected. So you might want to verify with QA that this is the correct bug for whatever issue you're facing (and change the tracking flags accordingly).
Flags: needinfo?(ryanvm)
Comment 16•11 years ago
|
||
Also, note by the Assignee field of this bug that Sotaro Ikeda is the author of this patch, not me.
| Assignee | ||
Comment 17•11 years ago
|
||
Comment 18•11 years ago
|
||
Much appreciate, Sotaro! Also thanks to Ryan's advice : )
Comment 19•11 years ago
|
||
This issue is verified fixed on Flame 2.2.
Result: Music continues to play after the Camera app is launched.
Device: Flame 2.2 (319mb, KK, Shallow Flash)
BuildID: 20141120040205
Gaia: 1abe09b4925547699dfdb2d358aed019137c3aa6
Gecko: 6ce1b906c690
Version: 36.0a1 (2.2)
Firmware Version: v188-1
User Agent: Mozilla/5.0 (Mobile; rv:36.0) Gecko/36.0 Firefox/36.0
Status: RESOLVED → VERIFIED
QA Whiteboard: [QAnalyst-Triage+] → [QAnalyst-Triage?]
Flags: needinfo?(ktucker)
Updated•11 years ago
|
QA Whiteboard: [QAnalyst-Triage?] → [QAnalyst-Triage+]
Flags: needinfo?(ktucker)
You need to log in
before you can comment on or make changes to this bug.
Description
•