Bug 1069109 - Do not occupy Audio channel if DOMMediaStream does not have audio r=cajbir